--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello, World!</title>
+    <title>Nothing!</title>
   </head>
   <body>
-      <h1>Nothing, Just hanging around!</h1>
+      <h1>Just hanging around!</h1>
   </body>
 </html>
